# jira: BA-121
# uat: UAT-8.1 Activity History
appId: polygentic.bijouxParentApp
---
- launchApp:
    clearState: true
    clearKeychain: true

- waitForAnimationToEnd

- tapOn:
    id: "onboarding-get-started-button"

- waitForAnimationToEnd

- tapOn:
    text: "you@example.com"

- inputText: "parent-sarah@test.bijoux.app"

- tapOn: "Welcome Back"

- tapOn: "Enter your password"

- inputText: "Test1234!"

- tapOn: "Welcome Back"

- tapOn:
    id: "login-submit-button"

- waitForAnimationToEnd

- tapOn: "Activity"

- waitForAnimationToEnd

- takeScreenshot: activity-history-screen


- takeScreenshot: activity-history-scrolled
