# jira: BA-101
# uat: UAT-1.1 Onboarding Screen
appId: polygentic.bijouxParentApp
---
- launchApp:
    clearState: true
    clearKeychain: true

- waitForAnimationToEnd

- assertVisible: "bijoux"

- assertVisible:
    id: "onboarding-get-started-button"

- assertVisible: "Get Started"

- takeScreenshot: onboarding-screen

- tapOn:
    id: "onboarding-get-started-button"

- waitForAnimationToEnd

- assertVisible: "Welcome Back"

- takeScreenshot: login-screen-after-onboarding
